# anylabeling

./: README.md  pyproject.toml  requirements-gpu.txt  requirements-macos.txt  requirements.txt  setup.py
.github/workflows/: release.yml
anylabeling/: app.py
anylabeling/services/auto_labeling/: model_manager.py  sam_onnx.py  segment_anything.py  yolov5.py  yolov8.py
anylabeling/views/common/: toaster.py
anylabeling/views/labeling/: label_widget.py  shape.py
anylabeling/views/labeling/utils/: qt.py
anylabeling/views/labeling/widgets/: canvas.py  color_dialog.py  file_dialog_preview.py  label_dialog.py  label_list_widget.py  toolbar.py
anylabeling/views/labeling/widgets/auto_labeling/: auto_labeling.py
scripts/: generate_languages.py
